# git_analysis

./: .env.example  .gitignore  Anki_Cards.csv  Anki_Cards.txt  LICENSE  ORIGINAL Review Cards - Sheet1.csv  README.md  README_NEW.md  Review Cards - Sheet1.csv  SAFE_TO_DELETE.md  SPANISH_LEARNING_README.md  WEB_PROJECTS_README.md  convert_anki_csv.py  convert_to_csv.py  docker-compose.yml  fluids.py  generate_pdf.py  generate_pdf_module2.py  generate_pdf_module3.py  generate_pdf_module4.py  generate_pdf_module5.py  gitignore  optimize_anki_cards.py  output.csv  pyproject.toml  railway.json  reorganize_workspace.ps1  safe_reorganize_workspace.ps1  setup.py  shuffle_subjunctive.py  shuffled_scenes.txt  subjunctive_scenes.txt
MySpanishApp/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SPECIFICATIONS.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
MySpanishApp/.claude/: settings.local.json
MySpanishApp/.github/: pull_request_template.md
MySpanishApp/ai/: __init__.py
MySpanishApp/devops/: README.md  backup-restore.yml
MySpanishApp/docs/: AI_FEATURES.md  INTEGRATION_EXAMPLES.md
MySpanishApp/models/: database.py  grammar_model.py  session_model.py  vocab_model.py
MySpanishApp/tests/: Makefile  README.md  conftest.py  pytest.ini  setup_testing.py  test_models.py  test_runner.py
MySpanishApp/utils/: export.py  logger.py
MySpanishApp/views/: main_window.py  plan_view.py  review_view.py  session_dialog.py  settings_view.py  track_view.py
YouTubeTranscriptGPT/: main.py  pyproject.toml
add_tags/: pyproject.toml
add_tags/data/: input_data.csv
add_tags/scripts/: tag_generator.py  tag_generator.txt
algorithms_and_data_structures/: CLEANUP_REPORT.md  CLI_FIX_SUMMARY.md  CLOUD_INTEGRATION_SUMMARY.md  ENHANCED_FEATURES.md  Makefile  PROJECT_STRUCTURE.md  README.md  README_CLAUDE_INTEGRATION.md  SIMPLIFICATION_SUMMARY.md  Start-Learning.ps1  TEST_IMPLEMENTATION_SUMMARY.md  algo_cli.py  algo_teach.py  claude_integrated_cli.py  claude_learning_session.py  cli.py  curriculum_cli.py  curriculum_cli_complete.py  curriculum_cli_enhanced.py  demo_enhanced_cli.py  demo_simplified_cli.py  fix_notes_system.py  index.js  install.ps1  install.sh  jest.config.js  launch_menu.py  learn.bat  learn.py  load_full_curriculum.py  main.py  menu.bat  package-lock.json  package.json  progress.json  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  requirements_simplified.txt  (+14 more)
algorithms_and_data_structures/.github/: CONTRIBUTING.md
algorithms_and_data_structures/claude_code_notes/: README.md  big_o_and_search_algorithms_2025-01-11.html  big_o_and_search_algorithms_2025-01-11.md  binary_search_deep_dive_2025-01-12.html  binary_search_deep_dive_2025-01-12.md
algorithms_and_data_structures/config/: cloud_config.json  mcp_setup.py  monitoring.json  themes.json
algorithms_and_data_structures/curriculum/: CURRICULUM_SUMMARY.md  README.md
algorithms_and_data_structures/data/: curriculum.json  curriculum_enhanced.json
algorithms_and_data_structures/demos/: cli_demo.py
algorithms_and_data_structures/docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLI_FIXES_SUMMARY.md  CLI_FORMATTING_STANDARDS.md  CLI_VERIFICATION_REPORT.md  COMPREHENSIVE_EVALUATION_REPORT.md  CONFIGURATION.md  CONSOLIDATION_SUMMARY.md  CURRICULUM_SYSTEM_FIX_COMPLETE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FLOW_NEXUS_INTEGRATION.md  FORMATTING_FIX_SOLUTION.md  FORMATTING_SYSTEM_COMPLETE.md  HONEST_USAGE_GUIDE.md  MENU_NAVIGATION.md  NOTES_SYSTEM_FIXED.md  PRACTICAL_LEARNING_WORKFLOW.md  QUICK_START.md  README.md  TERMINAL_BOX_FIXES_SUMMARY.md  TESTING_DOCUMENTATION.md  TESTING_STRATEGY_ANALYSIS.md  UNIFIED_FORMATTING_FLOW.md  USER_GUIDE.md  automation.md  cli-design-system.md  cli-ui-patterns.md  cli_ui_design_spec.md  display_improvements.md  menu-system.md  real_world_algorithms_part2.md  technical_debt_analysis.md  ui-testing.md
algorithms_and_data_structures/examples/: README.md  advanced-features-demo.ts  cli_design_samples.py  cli_design_showcase.py  interactive-menu-demo.ts  menu-benchmark.ts  menu-builder-cli.ts  navigation-demo.ts  ui-demo.ts
algorithms_and_data_structures/old_code_backup/: cli_engine.py  curriculum_cli_claude_enhanced.py  curriculum_cli_honest.py  enhanced_cli.py  enhanced_learning_system.py  main_menu.py
algorithms_and_data_structures/scripts/: cleanup_project.py  launch_beautiful.py  quickstart.py  run_offline.py  setup.py
algorithms_and_data_structures/src/: ARCHITECTURE.md  INTEGRATION_GUIDE.md  __init__.py  app.py  apply_claude_enhancements.py  claude_helper.py  cli.py  cli_formatter.py  command_router.py  config.py  curriculum_manager.py  enhanced_cli.py  enhanced_notes_ui.py  flow_nexus_teacher.py  index.js  main.py  main_improved.py  main_menu.py  (+3 more)
celebrity_gui/: main.py  pyproject.toml  style.qss  utils.py
city_map_explorer/: pyproject.toml
corporate_intel/: .env.example  .env.template  .gitignore  Dockerfile  EVALUATION_REPORT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_ingestion_simple.py
fluids-visualization/: app.py  pyproject.toml
home_inventory_manager/: main.py  pyproject.toml
map-description/: pyproject.toml
merge_gui/: .gitignore  README.md  main.py  pyproject.toml
movie_explorer_full/: main.py  pyproject.toml
unsplash-image-search-gpt-description/: .env.example  .eslintrc.js  .flake8  .gitattributes  .gitconfig  .gitignore  .gitmodules  .netlifyignore  .pre-commit-config.yaml  .prettierrc.json  .releaserc.json  .vercelignore  API_INTEGRATION_REPORT.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  IMAGE_SEARCH_TESTS_SUMMARY.md  LICENSE  MAIN_FIXED_SUMMARY.md  NETLIFY_DEPLOYMENT_STATUS.md  PYINSTALLER_OPTIMIZATION_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  REPO_SETUP_GUIDE.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SPECIFICATIONS.md  apply_timeout_fixes.py  build.bat  build.sh  config_manager.py  demo_vocabulary.csv  index.html  main.py  main_backup.py  main_fixed.py  main_fixes.py  main_modular.py  main_original.py  main_updated.py  manifest.json  (+37 more)
(+1587 files in other folders)
