[tool.poetry]
name = "langtool"
version = "0.1.0"
description = "A terminal-based language learning assistant powered by GPT-4o"
authors = ["Brandon Lambert <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8"
urwid = "^2.1.2"
tomlkit = "^0.11.6"
python-dotenv = "^1.1.0"
windows-curses = "^2.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.20"
flake8 = "^4.0"
mypy = "^1.0"

[tool.poetry.scripts]
langtool = "langtool.tool:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
