[tool.poetry]
name = "youtubetranscriptgpt"
version = "0.1.0"
description = ""
authors = ["bjpl <brandon.lambert87@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyqt6 = "^6.8.1"
google-api-python-client = "^2.166.0"
youtube-transcript-api = "^1.0.3"
openai = "^1.70.0"
tiktoken = "^0.9.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
