[tool.poetry]
name = "city-map-explorer"
version = "0.1.0"
description = "A PyQt5-based mapping application to generate city maps with bounding boxes."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "5.15.7"
PyQtWebEngine = "5.15.7"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
