[tool.poetry]
name = "home_inventory_manager"
version = "0.1.0"
description = "A PyQt5-based home inventory management application"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.15.9"

[tool.poetry.dev-dependencies]
# Add any dev dependencies like testing tools (e.g., pytest)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
