[tool.poetry]
name = "map-description-generator"
version = "0.1.0"
description = "A Python application for generating maps and descriptions using GPT-4o-mini with vision capabilities."
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "map_description"}] 

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.11"
osmnx = "^1.1.2"
matplotlib = "^3.6.2"
openai = "^0.27.0"
python-dotenv = "^1.0.1"
pyqt5-qt5 = "5.15.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
