[tool.poetry]
name = "csv-processor"
version = "0.1.0"
description = "A lightweight Windows-based GUI for CSV processing with duplicate resolution."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
PySimpleGUI = "^4.60.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
