[tool.poetry]
name = "movie_explorer_full"
version = "0.1.0"
description = "A self-study tool to explore movies, TV shows, actors, and directors."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
PySide6 = "^6.8.2.1"
openai = "^1.65.1"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
